# PG

./: CMakeLists.txt  README.md
data/: 6887_allied_avenger.mtl  geosphere.mtl  geosphere_white.mtl
data/cornell_box2/: cornell_box2.mtl
src/pg/pg1_embree/: BVH.cpp  BVH.h  SphereMap.cpp  SphereMap.h  TriangleLight.cpp  TriangleLight.h  camera.cpp  camera.h  material.cpp  material.h  mymath.h  objloader.cpp  pathtracer.cpp  pathtracer.h  pg1_embree.cpp  ray.cpp  ray.h  raytracer.cpp  raytracer.h  simpleguidx11.cpp  simpleguidx11.h  stdafx.h  structs.cpp  structs.h  texture.cpp  tutorials.cpp  tutorials.h  utils.cpp  vector3.cpp  vector3.h  vertex.h
